[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mirp"
version = "2.2.1"
description = "A package for standardised processing of medical imaging and computation of quantitative features."
authors = [
    {name = "Alex Zwanenburg", email = "alexander.zwanenburg@nct-dresden.de"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
requires-python = ">=3.10"
dependencies = [
    "itk>=5.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.25",
    "pandas>=2.0.0",
    "pydicom>=2.4.0",
    "pywavelets>=1.4.0",
    "scikit-image>=0.20.0",
    "scipy>=1.11",
    "typing-extensions>=4.10; python_version<'3.11'",
    "ray>=2.10.0; python_version<='3.11'"
]

[project.urls]
Repository = "https://github.com/oncoray/mirp"
Documentation = "https://oncoray.github.io/mirp/"
Changelog = "https://github.com/oncoray/mirp/blob/master/NEWS.md"

[project.optional-dependencies]
test = ["pytest>=7.4.0"]
docs = ["sphinx>=5.0.0", "sphinx_rtd_theme>=2.0.0", "nbsphinx"]

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
markers = [
    "ci: marks tests for continuous integration"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mirp*"]
exclude = ["docs*"]

[tool.setuptools.package-data]
mirp = ["config_settings.xml", "config_data.xml"]
